--- a/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj.filters
+++ b/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj.filters
@@ -1,30 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Math">
-      <UniqueIdentifier>{7d1bc0c3-3b15-435c-b963-54682bfb451e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Src">
-      <UniqueIdentifier>{e3796ac8-903f-4ab3-b9a0-c81de919fe9c}</UniqueIdentifier>
+    <Filter Include="box2d">
+      <UniqueIdentifier>{47eadf8e-707a-4966-acf5-a0e0384bdfca}</UniqueIdentifier>
     </Filter>
     <Filter Include="Inc">
-      <UniqueIdentifier>{d14431b4-1140-4a67-ae0f-0aebd15a9533}</UniqueIdentifier>
+      <UniqueIdentifier>{b288bb26-83ef-4796-bb83-897317d777f0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Src">
+      <UniqueIdentifier>{6926d117-9af2-4262-8825-cabb2c35a7d7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Math">
+      <UniqueIdentifier>{a7540092-7e21-446a-a614-3226dcc8bbbc}</UniqueIdentifier>
     </Filter>
     <Filter Include="Src\未実装">
-      <UniqueIdentifier>{39f72e0c-d3b4-45f1-af1d-c74c7701ffd2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="box2d">
-      <UniqueIdentifier>{57f57773-52b0-4742-ab0b-0554eef6a272}</UniqueIdentifier>
+      <UniqueIdentifier>{9df072e2-792e-4f73-b1d2-b4de0872cf39}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Box2D.cpp">
+      <Filter>box2d</Filter>
+    </ClCompile>
+    <ClCompile Include="Box2DBody.cpp">
+      <Filter>box2d</Filter>
+    </ClCompile>
+    <ClCompile Include="HelloBox2d.cpp">
+      <Filter>box2d</Filter>
+    </ClCompile>
     <ClCompile Include="WICTextureLoader.cpp">
       <Filter>Inc</Filter>
     </ClCompile>
     <ClCompile Include="Vector.cpp">
       <Filter>Math</Filter>
     </ClCompile>
-    <ClCompile Include="TextureAsset.cpp">
+    <ClCompile Include="Camera.cpp">
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="Component.cpp">
@@ -45,46 +54,70 @@
     <ClCompile Include="Renderer.cpp">
       <Filter>Src</Filter>
     </ClCompile>
+    <ClCompile Include="Scene.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureAsset.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
     <ClCompile Include="Window.cpp">
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="Animator.cpp">
       <Filter>Src\未実装</Filter>
     </ClCompile>
-    <ClCompile Include="Collider2D.cpp">
-      <Filter>Src\未実装</Filter>
-    </ClCompile>
-    <ClCompile Include="Scene.cpp">
-      <Filter>Src</Filter>
-    </ClCompile>
-    <ClCompile Include="HelloBox2d.cpp">
-      <Filter>box2d</Filter>
-    </ClCompile>
-    <ClCompile Include="Box2D.cpp">
-      <Filter>box2d</Filter>
-    </ClCompile>
-    <ClCompile Include="Physic2D.cpp">
-      <Filter>Src\未実装</Filter>
-    </ClCompile>
-    <ClCompile Include="Box2dDebug.cpp">
-      <Filter>box2d</Filter>
-    </ClCompile>
-    <ClCompile Include="Box2DBody.cpp">
-      <Filter>box2d</Filter>
-    </ClCompile>
-    <ClCompile Include="Camera.cpp">
+    <ClCompile Include="Debug.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Box2D.h">
+      <Filter>box2d</Filter>
+    </ClInclude>
+    <ClInclude Include="Box2DBody.h">
+      <Filter>box2d</Filter>
+    </ClInclude>
+    <ClInclude Include="HelloBox2d.h">
+      <Filter>box2d</Filter>
+    </ClInclude>
     <ClInclude Include="WICTextureLoader.h">
       <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="Math.h">
+      <Filter>Math</Filter>
     </ClInclude>
     <ClInclude Include="Vector.h">
       <Filter>Math</Filter>
     </ClInclude>
-    <ClInclude Include="Math.h">
-      <Filter>Math</Filter>
+    <ClInclude Include="Camera.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="directX3D.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Layer.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="shaders.h">
+      <Filter>Src</Filter>
     </ClInclude>
     <ClInclude Include="TextureAsset.h">
       <Filter>Src</Filter>
@@ -92,60 +125,11 @@
     <ClInclude Include="Window.h">
       <Filter>Src</Filter>
     </ClInclude>
-    <ClInclude Include="Renderer.h">
-      <Filter>Src</Filter>
-    </ClInclude>
-    <ClInclude Include="pch.h">
-      <Filter>Src</Filter>
-    </ClInclude>
-    <ClInclude Include="Object.h">
-      <Filter>Src</Filter>
-    </ClInclude>
-    <ClInclude Include="Layer.h">
-      <Filter>Src</Filter>
-    </ClInclude>
-    <ClInclude Include="Input.h">
-      <Filter>Src</Filter>
-    </ClInclude>
-    <ClInclude Include="directX3D.h">
-      <Filter>Src</Filter>
-    </ClInclude>
-    <ClInclude Include="Component.h">
-      <Filter>Src</Filter>
-    </ClInclude>
     <ClInclude Include="Animator.h">
       <Filter>Src\未実装</Filter>
     </ClInclude>
-    <ClInclude Include="Collider2D.h">
-      <Filter>Src\未実装</Filter>
-    </ClInclude>
-    <ClInclude Include="Scene.h">
+    <ClInclude Include="Debug.h">
       <Filter>Src</Filter>
     </ClInclude>
-    <ClInclude Include="HelloBox2d.h">
-      <Filter>box2d</Filter>
-    </ClInclude>
-    <ClInclude Include="Box2D.h">
-      <Filter>box2d</Filter>
-    </ClInclude>
-    <ClInclude Include="Physic2D.h">
-      <Filter>Src\未実装</Filter>
-    </ClInclude>
-    <ClInclude Include="Box2dDebug.h">
-      <Filter>box2d</Filter>
-    </ClInclude>
-    <ClInclude Include="shaders.h">
-      <Filter>Src</Filter>
-    </ClInclude>
-    <ClInclude Include="Box2DBody.h">
-      <Filter>box2d</Filter>
-    </ClInclude>
-    <ClInclude Include="Camera.h">
-      <Filter>Src</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <FxCompile Include="shader\hlsl\PixelShader.hlsl" />
-    <FxCompile Include="shader\hlsl\VertexShader.hlsl" />
   </ItemGroup>
 </Project>
