Add various shapes
Box2DのCircle,Capsuleを追加。
ヒットボックスを線で可視化した

--- a/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj
+++ b/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Angle.h" />
     <ClInclude Include="Animator.h" />
     <ClInclude Include="Box2D.h" />
     <ClInclude Include="Box2DBody.h" />
