--- a/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj.filters
+++ b/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj.filters
@@ -27,9 +27,6 @@
     <ClCompile Include="HelloBox2d.cpp">
       <Filter>box2d</Filter>
     </ClCompile>
-    <ClCompile Include="WICTextureLoader.cpp">
-      <Filter>Inc</Filter>
-    </ClCompile>
     <ClCompile Include="Vector.cpp">
       <Filter>Math</Filter>
     </ClCompile>
@@ -69,6 +66,12 @@
     <ClCompile Include="Debug.cpp">
       <Filter>Src</Filter>
     </ClCompile>
+    <ClCompile Include="DirectWrite.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="DWText.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Box2D.h">
@@ -79,9 +82,6 @@
     </ClInclude>
     <ClInclude Include="HelloBox2d.h">
       <Filter>box2d</Filter>
-    </ClInclude>
-    <ClInclude Include="WICTextureLoader.h">
-      <Filter>Inc</Filter>
     </ClInclude>
     <ClInclude Include="Math.h">
       <Filter>Math</Filter>
@@ -133,6 +133,12 @@
     </ClInclude>
     <ClInclude Include="Angle.h">
       <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="DirectWrite.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="DWText.h">
+      <Filter>Src</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
