--- a/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj.filters
+++ b/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj.filters
@@ -13,14 +13,11 @@
     <Filter Include="Math">
       <UniqueIdentifier>{a7540092-7e21-446a-a614-3226dcc8bbbc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Scene">
-      <UniqueIdentifier>{d92a4736-4e27-4f24-87da-a5ad3b4d5e35}</UniqueIdentifier>
+    <Filter Include="imgui">
+      <UniqueIdentifier>{b2d71112-1c8c-4edb-a694-7f68651c0dcb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="scene\AnimationBuilder.cpp">
-      <Filter>Scene</Filter>
-    </ClCompile>
     <ClCompile Include="src\Box2D.cpp">
       <Filter>box2d</Filter>
     </ClCompile>
@@ -72,11 +69,35 @@
     <ClCompile Include="src\Window.cpp">
       <Filter>Src</Filter>
     </ClCompile>
+    <ClCompile Include="src\Button.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_demo.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_draw.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_impl_dx11.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_impl_win32.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_tables.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_widgets.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ImGuiApp.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AnimationBuilder.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
     <ClInclude Include="inc\Box2D.h">
       <Filter>box2d</Filter>
     </ClInclude>
@@ -139,6 +160,36 @@
     </ClInclude>
     <ClInclude Include="src\shaders.h">
       <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\Button.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imconfig.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_impl_dx11.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_impl_win32.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_internal.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_rectpack.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_textedit.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_truetype.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\ImGuiApp.h">
+      <Filter>Inc</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
