Almost main system complete.
ウィンドウの作成をコンポーネント化
それを活用して反重力、低重力、透過ウィンドウの作成。多分同じかんじで他のウィンドウも作成できる

--- a/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj
+++ b/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj
@@ -207,6 +207,7 @@
     <ClInclude Include="inc\SFText.h" />
     <ClInclude Include="inc\TextureAsset.h" />
     <ClInclude Include="inc\Window.h" />
+    <ClInclude Include="inc\WindowRect.h" />
     <ClInclude Include="math\Angle.h" />
     <ClInclude Include="math\Math.h" />
     <ClInclude Include="math\Vector.h" />
