--- a/HewGame/HewGame/HewGame.vcxproj
+++ b/HewGame/HewGame/HewGame.vcxproj
@@ -142,17 +142,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AnimationBuilderh.h" />
+    <ClInclude Include="LowGravity.h" />
     <ClInclude Include="MovePlayer.h" />
+    <ClInclude Include="Permeation.h" />
     <ClInclude Include="Scene_ProtoType.h" />
     <ClInclude Include="Sample_Animation.h" />
     <ClInclude Include="Sample_Box2D.h" />
     <ClInclude Include="Sample_SceneLoad.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="AntiGravity.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnimationBuilder.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="MovePlayer.cpp" />
+    <ClCompile Include="Permeation.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
