--- a/HewGame/HewGame/imgui.ini
+++ b/HewGame/HewGame/imgui.ini
@@ -1,8 +1,32 @@
 [Window][Debug##Default]
-Pos=60,38
+Pos=26,356
 Size=400,400
 
 [Window][Example Window]
 Pos=60,38
 Size=300,70
+
+[Window][Object List]
+Pos=28,267
+Size=199,328
+
+[Window][Draggable Window]
+Pos=60,60
+Size=135,32
+
+[Window][Menu]
+Pos=27,116
+Size=355,132
+
+[Window][Status]
+Pos=33,42
+Size=318,65
+
+[Window][Transform]
+Pos=41,33
+Size=292,129
+
+[Window][Inspecter]
+Pos=60,60
+Size=278,249
 
