--- a/HewGame/HewGame/imgui.ini
+++ b/HewGame/HewGame/imgui.ini
@@ -7,7 +7,7 @@ Pos=60,38
 Size=300,70
 
 [Window][Object List]
-Pos=28,267
+Pos=30,292
 Size=199,328
 
 [Window][Draggable Window]
@@ -16,10 +16,10 @@ Size=135,32
 
 [Window][Menu]
 Pos=27,116
-Size=355,132
+Size=396,156
 
 [Window][Status]
-Pos=33,42
+Pos=28,35
 Size=318,65
 
 [Window][Transform]
@@ -28,5 +28,24 @@ Size=292,129
 
 [Window][Inspecter]
 Pos=47,32
-Size=279,361
+Size=359,478
+
+[Window][Filter Table]
+Pos=4,136
+Size=461,425
+
+[Table][0xED52FBCC,12]
+RefScale=13
+Column 0  Width=105
+Column 1  Width=19
+Column 2  Width=19
+Column 3  Width=19
+Column 4  Width=19
+Column 5  Width=19
+Column 6  Width=19
+Column 7  Width=19
+Column 8  Width=19
+Column 9  Width=19
+Column 10 Width=19
+Column 11 Width=16
 
