--- a/HewGame/HewGame/imgui.ini
+++ b/HewGame/HewGame/imgui.ini
@@ -20,7 +20,7 @@ Size=396,156
 
 [Window][Status]
 Pos=28,35
-Size=318,65
+Size=398,63
 
 [Window][Transform]
 Pos=41,33
@@ -28,11 +28,19 @@ Size=292,129
 
 [Window][Inspecter]
 Pos=47,32
-Size=359,478
+Size=367,551
 
 [Window][Filter Table]
 Pos=4,136
 Size=461,425
+
+[Window][Project Files]
+Pos=60,60
+Size=281,217
+
+[Window][Hierarchy]
+Pos=28,284
+Size=385,410
 
 [Table][0xED52FBCC,12]
 RefScale=13
