--- a/HewGame/HewGame/imgui.ini
+++ b/HewGame/HewGame/imgui.ini
@@ -44,7 +44,7 @@ Size=385,410
 
 [Window][Inspector]
 Pos=32,31
-Size=440,634
+Size=434,615
 
 [Table][0xED52FBCC,12]
 RefScale=13
@@ -60,4 +60,19 @@ Column 8  Width=19
 Column 9  Width=19
 Column 10 Width=19
 Column 11 Width=16
+
+[Table][0xCE33DAB9,12]
+RefScale=13
+Column 0  Width=91
+Column 1  Width=19
+Column 2  Width=19
+Column 3  Width=19
+Column 4  Width=19
+Column 5  Width=19
+Column 6  Width=19
+Column 7  Width=19
+Column 8  Width=19
+Column 9  Width=19
+Column 10 Width=19
+Column 11 Width=19
 
