--- a/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj
+++ b/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj
@@ -215,7 +215,7 @@
     <ClInclude Include="inc\TextureAsset.h" />
     <ClInclude Include="inc\Utility.h" />
     <ClInclude Include="inc\Window.h" />
-    <ClInclude Include="inc\WindowRect.h" />
+    <ClInclude Include="inc\SubWindow.h" />
     <ClInclude Include="math\Angle.h" />
     <ClInclude Include="math\Math.h" />
     <ClInclude Include="math\Vector.h" />
