Add main Editor
メインウィンドウで編集するUIを追加した。あと細かい機能追加

--- a/HewGame/HewGame/imgui.ini
+++ b/HewGame/HewGame/imgui.ini
@@ -15,12 +15,12 @@ Pos=60,60
 Size=135,32
 
 [Window][Menu]
-Pos=27,116
-Size=396,156
+Pos=0,100
+Size=480,180
 
 [Window][Status]
-Pos=28,35
-Size=398,63
+Pos=0,0
+Size=480,100
 
 [Window][Transform]
 Pos=41,33
@@ -39,12 +39,36 @@ Pos=60,60
 Size=281,217
 
 [Window][Hierarchy]
-Pos=28,284
-Size=385,410
+Pos=0,280
+Size=480,440
 
 [Window][Inspector]
-Pos=32,26
-Size=432,655
+Pos=0,0
+Size=480,720
+
+[Window][aaa]
+Pos=0,0
+Size=240,360
+
+[Window][ccc]
+Pos=0,360
+Size=960,360
+
+[Window][bbb]
+Pos=720,0
+Size=240,360
+
+[Window][Source]
+Pos=720,0
+Size=240,360
+
+[Window][Work]
+Pos=0,360
+Size=960,360
+
+[Window][Pipe]
+Pos=0,0
+Size=240,360
 
 [Table][0xED52FBCC,12]
 RefScale=13
